syntax = "proto3";

package io.iohk.cvp.intdemo;

service IDService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
    rpc SetPersonalData (SetPersonalDataRequest) returns (SetPersonalDataResponse) {}
}

service DegreeService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

message GetSubjectStatusRequest {
    string connectionToken = 1;
}

enum SubjectStatus {
    UNCONNECTED = 0;
    CONNECTED = 1;
    CREDENTIAL_AVAILABLE = 2;
    CREDENTIAL_SENT = 3;
    CREDENTIAL_RECEIVED = 4;
}

message GetSubjectStatusResponse {
    SubjectStatus subjectStatus = 1;
}

message GetConnectionTokenRequest {
}

message GetConnectionTokenResponse {
    string connectionToken = 1;
}

message SetPersonalDataRequest {
    string connectionToken = 1;
    string firstName = 2;
    Date dateOfBirth = 3;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message SetPersonalDataResponse {}
